<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_title_label" />

    <EditText
        android:id="@+id/activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_title_hint" />

    <Button
        android:id="@+id/activity_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Todays Date" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_place_label" />

    <EditText
        android:id="@+id/activity_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_place_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_time" />

        <Button
            android:id="@+id/finish_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finish_time" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/individual_activity"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:text="@string/individual_activity" />

        <CheckBox
            android:id="@+id/group_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_activity" />
    </LinearLayout>

</LinearLayout>
